--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
   * Improve utest/Makefile.
   * Add unit test for base64.c.
   * Make from_base64() ignore invalid characters.
+  * Make the path to pidfiles in the config files substitutable.
 
 2015-02-06: Changes in burp-2.0.12:
   * Move /etc/burp scripts to /usr/share/burp/scripts.
