--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
   * Add unit test for base64.c.
   * Make from_base64() ignore invalid characters.
   * Make the path to pidfiles in the config files substitutable.
+  * Fix some phase1 bugs related to min/max_file_size and hard links.
 
 2015-02-06: Changes in burp-2.0.12:
   * Move /etc/burp scripts to /usr/share/burp/scripts.
