BSD compilation fixes from Stefan Paletta.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@
   * Make from_base64() ignore invalid characters.
   * Make the path to pidfiles in the config files substitutable.
   * Fix some phase1 bugs related to min/max_file_size and hard links.
+  * BSD compilation fixes from Stefan Paletta.
 
 2015-02-06: Changes in burp-2.0.12:
   * Move /etc/burp scripts to /usr/share/burp/scripts.
