Fix for a protocol 1 bug to do with the first hardlinked entry being deleted on the client.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,8 @@
   * Fix some phase1 bugs related to min/max_file_size and hard links.
   * BSD compilation fixes from Stefan Paletta.
   * Make restoring a hard link without restoring the original file work.
+  * Fix for a protocol 1 bug to do with the first hardlinked entry being
+    deleted on the client.
 
 2015-02-06: Changes in burp-2.0.12:
   * Move /etc/burp scripts to /usr/share/burp/scripts.
