Add ability to do 'burp -a l -b c' and list the files in the current backup.

--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -131,6 +131,9 @@ Lists all the files in backup number 1.
 \fBburp \-a l \-b a\fR
 Lists all the files in all the backups.
 .TP
+\fBburp \-a l \-b c\fR
+Lists all the files in the current backup.
+.TP
 \fBburp \-a l \-b 1 \-r myregex\fR
 Lists all the files in backup number 1 that match the regular expression 'myregex'.
 .TP
