--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,8 @@
     current conf settings. Add '-c <conf file>' and '-C <client>' to get
     client/server conf settings, and clientconfdir settings.
   * More unit tests.
+  * Add 'scan_problem_raises_error' option, which lets you treat phase1 scan
+    warnings as hard errors.
 
 2015-03-02: Changes in burp-2.0.14:
   * Improve utest/Makefile.
