--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@
   * Add 'scan_problem_raises_error' option, which lets you treat phase1 scan
     warnings as hard errors.
   * Fix bug where 'burp -a S' was limited to 24 lines.
+  * Make 'burp -a S' not truncate client names.
 
 2015-03-02: Changes in burp-2.0.14:
   * Improve utest/Makefile.
