--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,6 +9,7 @@
   * Fix bug where 'burp -a S' was limited to 24 lines.
   * Make 'burp -a S' not truncate client names.
   * Implement glob '. /some/dir/*' conf syntax on non-Windows machines.
+  * Changes to support librsync-1.0.0.  
 
 2015-03-02: Changes in burp-2.0.14:
   * Improve utest/Makefile.
