When listing a directory, include a '.' entry to indicate the directory itself. Enables the user to distinguish between a directory that is empty and one that doesn't exist.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,9 @@
   * Make 'burp -a S' not truncate client names.
   * Implement glob '. /some/dir/*' conf syntax on non-Windows machines.
   * Changes to support librsync-1.0.0.  
+  * When listing a directory, include a '.' entry to indicate the directory
+    itself. Enables the user to distinguish between a directory that is empty
+    and one that doesn't exist.
 
 2015-03-02: Changes in burp-2.0.14:
   * Improve utest/Makefile.
