--- a/CHANGELOG
+++ b/CHANGELOG
@@ -16,6 +16,7 @@
   * Fix for client getaddrinfo error message.
   * Fix resume bug when a backup is interrupted before phase1 has got under
     way.
+  * Fix resume bug where an interruption in phase3 causes problems.
 
 2015-03-02: Changes in burp-2.0.14:
   * Improve utest/Makefile.
