--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2015-02-28 Changes in burp-1.4.34:
   * Fix bug where permissions would not be backed up correctly when only
     permissions have changed.
   * Support librsync-1.0.0.
