--- a/CHANGELOG
+++ b/CHANGELOG
@@ -19,6 +19,13 @@
   * Fix resume bug where an interruption in phase3 causes problems.
   * Fix compile when there is no ncurses.
 
+2015-02-28 Changes in burp-1.4.34:
+  * Fix bug where permissions would not be backed up correctly when only
+    permissions have changed.
+  * Support librsync-1.0.0.
+  * Bug fix for client getaddrinfo error message.
+  * Upgrade Windows depkgs to openssl-1.0.1m.
+
 2015-03-02: Changes in burp-2.0.14:
   * Improve utest/Makefile.
   * Add unit test for base64.c.
