--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2015-02-28 Changes in burp-2.0.16:
   * Add ability to do 'burp -a l -b c' and list the files in the current
     backup.
   * Rewrite the conf system. Gives the ability to use 'burp -t' to show the
