--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@
   * Fix problem where a client connecting while a backup was finalising
     would cause 'backup failed' emails to be sent.
   * Fix two possible segfaults discovered with efence.
+  * Fix status monitor segfault due to recent conf system changes.
 
 2015-02-28 Changes in burp-2.0.16:
   * Add ability to do 'burp -a l -b c' and list the files in the current
