--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@
   * Fix status monitor segfault due to recent conf system changes.
   * Use setlinebuf(stdout) with '-a m' so that reading processes get the
     output of the logp printfs straight away.
+  * Add out-of-date report script from Pablo Daniel Estigarribia Davyt.
 
 2015-02-28 Changes in burp-2.0.16:
   * Add ability to do 'burp -a l -b c' and list the files in the current
