--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,8 @@
   * Add out-of-date report script from Pablo Daniel Estigarribia Davyt.
   * 'backup_script_reserved_args=0|1' and 'restore_script_reserved_args='0|1'
     client side options.
+  * Fix protocol2 dpth incrementing bug where storage directories were limited
+    to 0x1000 instead of 0x7530.
 
 2015-02-28 Changes in burp-2.0.16:
   * Add ability to do 'burp -a l -b c' and list the files in the current
