More dpth cleanup.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,6 +13,7 @@
   * Fix protocol2 dpth incrementing bugs.
   * Fix Windows VSS output so that it prints the writer names at the start of
     backups.
+  * More unit tests.
 
 2015-02-28 Changes in burp-2.0.16:
   * Add ability to do 'burp -a l -b c' and list the files in the current
