Don't open the log when about to delete the working directory.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,6 +15,7 @@
     backups.
   * More unit tests.
   * Add some documentation about working_dir_recovery_method.
+  * Don't open the log when about to delete the working directory.
 
 2015-02-28 Changes in burp-2.0.16:
   * Add ability to do 'burp -a l -b c' and list the files in the current
