Comment out ssl_key_password lines in the example configs. Make a note in all the documentation that it is only needed if you have an encrypted certificate.

--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -334,7 +334,7 @@ The path to the server SSL certificate. It works for me when the file contains t
 The path to the server SSL private key in PEM format.
 .TP
 \fBssl_key_password=[password]\fR
-The SSL key password.
+Only needed for loading an encrypted certificate.
 .TP
 \fBssl_cert_password=[password]\fR
 Synonym for ssl_key_password.
@@ -504,7 +504,7 @@ The path to the client SSL certificate. It works for me when the file contains t
 The path to the client SSL private key in PEM format.
 .TP
 \fBssl_key_password=[password]\fR
-The SSL key password.
+Only needed for loading an encrypted certificate.
 .TP
 \fBssl_cert_password=[password]\fR
 Synonym for ssl_key_password.
