--- a/CHANGELOG
+++ b/CHANGELOG
@@ -17,6 +17,7 @@
   * Add some documentation about working_dir_recovery_method.
   * Don't open the log when about to delete the working directory.
   * Stop server side 'auth ok' message logging a freed string.
+  * Updates to out_of_date_report_script from Pablo Estigarribia.
 
 2015-02-28 Changes in burp-2.0.16:
   * Add ability to do 'burp -a l -b c' and list the files in the current
