--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@
   * Fix '-a l' regex so that it isn't split in two at the right-most
     colon.
   * Fix possible buffer overrun when encoding attribs.
+  * Fix protocol 1 phase 2 resume bug introduced in 2.0.20.
 
 2015-05-30 Changes in burp-2.0.20:
   * Fix conf bug that was causing the server to segfault when the client
