Use 'stat' for checking ssl files instead of 'lstat', and log if the ssl file was not found.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,8 @@
   * Fix possible protocol 2 phase 2 segfaults.
   * Make protocol 1 and 2 share the same code for phase 3.
   * Set default_md=sha256 in CA.cnf.
+  * Use 'stat' for checking ssl files instead of 'lstat', and log if
+    the ssl file was not found.
 
 2015-05-30 Changes in burp-2.0.20:
   * Fix conf bug that was causing the server to segfault when the client
