--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,6 +9,7 @@
   * Set default_md=sha256 in CA.cnf.
   * Use 'stat' for checking ssl files instead of 'lstat', and log if
     the ssl file was not found.
+  * Fix path for server initiated backup via timer_script.
 
 2015-05-30 Changes in burp-2.0.20:
   * Fix conf bug that was causing the server to segfault when the client
