--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2015-07-01 Changes in burp-1.4.40:
   * Fix '-a l' regex so that it isn't split in two at the right-most
     colon.
   * Set default_md=sha256 in CA.cnf.
