--- a/CHANGELOG
+++ b/CHANGELOG
@@ -12,6 +12,13 @@
   * Fix path for server initiated backup via timer_script.
   * Use mach.h headers and functions instead of clock_gettime() on Mac.
 
+2015-07-01 Changes in burp-1.4.40:
+  * Fix '-a l' regex so that it isn't split in two at the right-most
+    colon.
+  * Set default_md=sha256 in CA.cnf.
+  * Correct logp format strings in quota.c.
+  * Upgrade Windows depkgs to openssl-1.0.1o.
+
 2015-05-30 Changes in burp-2.0.20:
   * Fix conf bug that was causing the server to segfault when the client
     used the -C option. Also add unit test for it.
