--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+  * Fix from Patrick Van der Veken to correct typo in timer_script that
+    meant month settings were broken.
+
 2015-05-30 Changes in burp-2.0.20:
   * Fix conf bug that was causing the server to segfault when the client
     used the -C option. Also add unit test for it.
