Fix Windows protocol1 restore segfault when using split_vss.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,6 +14,7 @@
     clock code and '-lrt' link flag.
   * Get xattr working on Mac OSX. This should mean that resource forks and
     finder info backup/restore is working.
+  * Fix Windows protocol1 restore segfault when using split_vss.
 
 2015-07-01 Changes in burp-1.4.40:
   * Fix '-a l' regex so that it isn't split in two at the right-most
