Fix for SIGHUP causing server to stop listening.
Change-Id: Ibed9f75d75091e8194a31fbfc90ce09bc5bdda17

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -24,6 +24,7 @@
   * Fix bug where Windows backups with split_vss was saving CMD_METADATA
     instead of CMD_VSS.
   * Prevent warnings when listing backups that contain metadata.
+  * Fix for SIGHUP causing server to stop listening.
 
 2015-07-01 Changes in burp-1.4.40:
   * Fix '-a l' regex so that it isn't split in two at the right-most
