Fix for server side restore file causing '-a m' to exit.
Change-Id: I6abd761d6b8876bdb1a9a159111b1198870249cb

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -42,6 +42,7 @@
     supported, and "127.0.0.1" otherwise.
   * Substitute 127.0.0.1 for the default burp.conf server address if the OS
     doesn't have IPv6.
+  * Fix for server side restore file causing '-a m' to exit.
 
 2015-07-01 Changes in burp-1.4.40:
   * Fix '-a l' regex so that it isn't split in two at the right-most
