--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2015-09-04 Changes in burp-2.0.22:
   * Make protocol2 resume work. Add unit tests for resume components.
   * Store manifest fingerprints and md5sums in binary instead of strings,
     plus related endian fixes.
