--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,8 @@
   * Fix a bug where deleting with multiple keep settings and no hardlinked
     archives would result in too many backups getting removed in the oldest
     keep range.
+  * During backup, read compression settings from the attribs buffer sent from
+    the client rather than relying on the server config being correct.
 
 2015-09-04 Changes in burp-2.0.22:
   * Make protocol2 resume work. Add unit tests for resume components.
