--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
   * Another fix for sigchld handling.
   * Tests for delete algorithm.
+  * Tests for bu_get.
   * Fix a bug where deleting with multiple keep settings and no hardlinked
     archives would result in too many backups getting removed in the oldest
     keep range.
